[project]
name = "intersect-dial-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lance Drane", email = "dranelt@ornl.gov" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0,<3.0.0",
  "intersect-sdk>=0.9.1,<0.10.0"
]

[dependency-groups]
dev = ["codespell>=2.4.2", "mypy>=2.1.0", "pre-commit>=4.6.0", "pytest>=8.4.2", "ruff==0.12.7"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
format = { quote-style = 'single' }

[tool.ruff.lint]
isort = { known-first-party = ['src'] }
pydocstyle = { convention = 'google' }
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 20 }
pylint = { max-args = 10, max-branches = 20, max-returns = 15, max-statements = 75 }
# pyflakes and the relevant pycodestyle rules are already configured
extend-select = [
  'C90',   # mccabe complexity
  'I',     # isort
  'N',     # pep8-naming
  'D',     # pydocstyle
  'UP',    # pyupgrade
  'YTT',   # flake8-2020
  'ANN',   # flake8-annotations
  'ASYNC', # flake8-async
  'S',     # flake8-bandit
  'BLE',   # flake8-blind-except
  'B',     # flake8-bugbear
  'A',     # flake8-builtins
  'COM',   # flake8-commas
  'C4',    # flake8-comprehensions
  'DTZ',   # flake8-datetimez
  'T10',   # flake8-debugger
  'EM',    # flake8-error-message
  'FA',    # flake8-future-annotations
  'ISC',   # flake8-implicit-string-concat
  'ICN',   # flake8-import-conventions
  'G',     # flake8-logging-format
  'INP',   # flake8-no-pep420
  'PIE',   # flake8-PIE
  'T20',   # flake8-T20
  'PYI',   # flake8-pyi
  'PT',    # flake8-pytest-style
  'Q',     # flake8-quotes
  'RSE',   # flake8-raise
  'RET',   # flake8-return
  'SLF',   # flake8-self
  'SLOT',  # flake8-slots
  'SIM',   # flake8-simplify
  'TC',    # flake8-type-checking
  'ARG',   # flake8-unused-arguments
  'PTH',   # flake8-use-pathlib
  'PGH',   # pygrep-hooks
  'PL',    # pylint
  'TRY',   # tryceratops
  'FLY',   # flynt
  'RUF',   # RUFF additional rules
  'INT',   # flake8-gettext
]
# If you're seeking to disable a rule, first consider whether the rule is overbearing, or if it should only be turned off for your usecase.
ignore = [
  'COM812',  # formatter, handled by Ruff format
  'ISC001',  # formatter, handled by Ruff format
  'SIM105',  # "with contextlib.suppress():" is slower than try-except-pass
  'ANN401',  # allow explicit "Any" typing, use with care
  'PLR2004', # allow "magic numbers"
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = [
  "pydantic.dataclasses.dataclass",
  "pydantic.validate_call",
]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = [
  'F401',  # __init__.py commonly has unused imports
  'TC004', # do lazy imports when importing from the base module
]
'docs/*' = [
  'D',      # the documentation folder does not need documentation
  'INP001', # docs are not a namespace package
]
'examples/*' = [
  'N999',   # module names for examples are not standard
  'T20',    # allow print/pprint statements in examples
  'S106',   # don't care about credentials in examples
  'D100',   # documenting modules in examples is unhelpful
  'D104',   # documenting packages in examples is unhelpful
  'TRY002', # examples can raise their own exception
]
'tests/*' = [
  'S101',   # allow assert statements in tests
  'S106',   # don't care about credentials in tests
  'S311',   # don't care about cryptographic security in tests
  'SLF001', # allow private member access in tests
  'ANN',    # tests in general don't need types, unless they are runtime types.
  'ARG',    # allow unused parameters in tests
  'D',      # ignore documentation in tests
  'RUF012', # permit "mutable" class attributes to not be annotated with typing.ClassVar (these shouldn't be mutated anyways...)
]

# see https://mypy.readthedocs.io/en/stable/config_file.html for a complete reference
[tool.mypy]
strict = true
ignore_missing_imports = true       # don't require typing for library stubs if they don't exist
disallow_untyped_decorators = false # this is needed for library decorator compatibility, i.e. "retrying"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock,.venv,.*cache/*,./docs/_build/*'
check-hidden = true
